# cli-coin-predictor

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  models.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2799db81d5b7_create_tables.py
app/cli/: cli.py
app/cli/models/: coins.py  coins_threading.py  db_loaders.py
app/data/: bitcoin_2017-12-01.csv  coins_2017-03-01_2017-03-03.csv  coins_2024-03-03_2024-03-06.csv
app/sql/create_tables/: coin_data.sql  coin_month_data.sql
app/sql/queries/: avg_price_month.sql  query_2.sql  run_query.py
