[tool.poetry]
name = "exam-rodrigo-jerez"
version = "0.1.0"
description = ""
authors = ["RAJerez <rodrigoagustin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.1.7"
sqlalchemy = ">=1.3,<=2.0.27"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
black = "^24.2.0"
pandas = ">=1.3.0,<2.0.0"
requests = "^2.31.0"
alembic = "^1.13.1"
schedule = "^1.2.1"
muttlib = {version = "^1.4.27", extras = ["forecast"]}
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
